cmake_minimum_required(VERSION 3.13)
project(C__Project)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__Project main.cpp PCB.cpp PCB.h CPU.cpp CPU.h LOADER.cpp LOADER.h DISK.cpp DISK.h RAM.cpp RAM.h LONG_TERM_SCHEDULER.cpp LONG_TERM_SCHEDULER.h DRIVER.cpp DRIVER.h SHORT_TERM_SCHEDULER.cpp SHORT_TERM_SCHEDULER.h DISPATCHER.cpp DISPATCHER.h MEMORY_MANAGEMENT_UNIT.cpp MEMORY_MANAGEMENT_UNIT.h)